# ssd_nodelet

./: CHANGELOG.rst  CMakeLists.txt  README.md  README_en.md  install.sh  nodelet_description.xml  package.xml  setup.sh  setup_rules.bash
config/rviz/: ssd_nodelet.rviz  ssd_nodelet_azure_kinect.rviz
include/: single_shot_multibox_detector.hpp
include/ssd_nodelet/: single_shot_multibox_detector.hpp  single_shot_multibox_detector_old.hpp
launch/: camera.launch  camera_1080p_16_9.launch  camera_1080p_3_2.launch  camera_480p_16_9.launch  camera_480p_3_2.launch  camera_720p_3_2.launch  demo.launch  face_detect.launch  face_detect_pose.launch  object_detect.launch  object_detect_pose.launch  object_detect_pose_azure_kinect.launch  person_detect.launch  person_detect_azure_kinect_pose.launch  person_detect_pose.launch  ssd_ros.launch.xml
launch/camera/: camera_1080p_16_9.launch  camera_1080p_3_2.launch  camera_480p_16_9.launch  camera_480p_3_2.launch  camera_720p_16_9.launch  camera_720p_3_2.launch
models/: face.prototxt  voc_object.prototxt
msg/: BoundingBox.msg
src/: image_subscriber_nodelet.cpp  single_shot_multibox_detector.cpp  single_shot_multibox_detector_old.cpp  tester.cpp
src/nodelets/: image_cloud_subscriber_nodelet.cpp  image_subscriber_nodelet.cpp
